<resources>
    <string name="app_name">Scala</string>
    <string name="feedbacktitle">Feed Back</string>
    <string name="feedbackname_hint">Type your first name</string>
    <string name="feedbackemail_hint">Type your email</string>
    <string name="feedbacktype">Feedback type</string>
    <string name="feedbackbody_hint">Type your feedback</string>
    <string name="feedbackresponse_hint">Need email response ?</string>
    <string name="feedbackbutton_text">Submit</string>
    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
</resources>
