<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mycompany.myapplication.MainActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedbacktitle"
                android:textSize="10pt">
            </TextView>

            <EditText
                android:id="@+id/EditTextName"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackname_hint"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </EditText>

            <EditText
                android:id="@+id/EditTextEmail"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackemail_hint"
                android:inputType="textEmailAddress"
                android:layout_width="fill_parent">
            </EditText>

            <Spinner
                android:id="@+id/SpinnerFeedbackType"
                android:layout_height="wrap_content"
                android:prompt="@string/feedbacktype"
                android:layout_width="fill_parent"
                android:entries="@array/feedbacktypelist">
            </Spinner>

            <EditText
                android:id="@+id/EditTextFeedbackBody"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackbody_hint"
                android:inputType="textMultiLine"
                android:lines="5"
                android:layout_width="fill_parent">
            </EditText>

            <CheckBox
                android:id="@+id/CheckBoxResponse"
                android:layout_height="wrap_content"
                android:text="@string/feedbackresponse_hint"
                android:layout_width="fill_parent">
            </CheckBox>

            <Button
                android:id="@+id/ButtonSendFeedback"
                android:layout_height="wrap_content"
                android:text="@string/feedbackbutton_text"
                android:onClick="sendFeedback"
                android:layout_width="fill_parent">
            </Button>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
